--- a/.github/workflows/ansible-core.yml
+++ b/.github/workflows/ansible-core.yml
@@ -109,7 +109,8 @@ jobs:
             
             if [ "${DIST}" == "focal" ] || [ "${DIST}" == "impish" ]; then
               cp -a "${HOME}"/work/ppa/ppa/"${DEB_NAME}"/control_file/control_focal_impish ./debian/control
-              pip install --upgrade -t ./lib/ansible/_vendor/ jinja2=="${JINJA2_VERSION}" resolvelib=="${RESOLVELIB_VERSION}"
+              python3 -m pip install --no-deps --upgrade -t ./lib/ansible/_vendor/ markupsafe==2.1.1
+              python3 -m pip install --no-deps --upgrade -t ./lib/ansible/_vendor/ jinja2=="${JINJA2_VERSION}" resolvelib=="${RESOLVELIB_VERSION}"
               export DEST=usr/lib/python3/dist-packages/ansible/_vendor
               echo "lib/ansible/_vendor/Jinja2-${JINJA2_VERSION}.dist-info ${DEST}" >> ./debian/ansible-core.install
               echo "lib/ansible/_vendor/MarkupSafe-2.1.1.dist-info ${DEST}" >> ./debian/ansible-core.install
