--- a/.github/workflows/ansible-core.yml
+++ b/.github/workflows/ansible-core.yml
@@ -81,14 +81,14 @@ jobs:
           sudo apt -y install software-properties-common
           sudo add-apt-repository --yes --update ppa:"${LAUNCHPAD_PROJECT}"/"${LAUNCHPAD_PPA}"
 
-          sudo apt -y install make python3 python3-packaging python3-setuptools python3-straight.plugin python3-yaml python3-docutils devscripts cdbs debhelper dh-python
+          sudo apt -y install make python3 python3-packaging python3-setuptools python3-pip python3-venv python3-straight.plugin python3-yaml python3-docutils devscripts cdbs debhelper dh-python
 
           mkdir -p "${HOME}"/"${DEB_NAME}" && cd "$_" || exit
           rm -rf "${DEB_NAME}"-"${DEB_VERSION}"*
           wget "${TARBALL_BASE_URL}"/"${DEB_NAME:0:1}"/"${DEB_NAME}"/"${DEB_NAME}"-"${DEB_VERSION}".tar.gz
           tar -xzf "${DEB_NAME}"-"${DEB_VERSION}".tar.gz
           cd "${DEB_NAME}"-"${DEB_VERSION}" || exit
-          _ANSIBLE_SDIST_FROM_MAKEFILE=1 python3 setup.py sdist --dist-dir=dist
+          python3 -m build
 
           DATE=$(date -R)
           export DATE
