--- a/.github/workflows/ansible-core.yml
+++ b/.github/workflows/ansible-core.yml
@@ -82,6 +82,8 @@ jobs:
           sudo add-apt-repository --yes --update ppa:"${LAUNCHPAD_PROJECT}"/"${LAUNCHPAD_PPA}"
 
           sudo apt -y install make python3 python3-packaging python3-setuptools python3-pip python3-venv python3-straight.plugin python3-yaml python3-docutils devscripts cdbs debhelper dh-python
+          
+          python3 -m pip install build
 
           mkdir -p "${HOME}"/"${DEB_NAME}" && cd "$_" || exit
           rm -rf "${DEB_NAME}"-"${DEB_VERSION}"*
