--- a/.github/workflows/latest_builds.yml
+++ b/.github/workflows/latest_builds.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   kick_off_builds:
     name: kick off builds
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: check out repo
         uses: actions/checkout@v3
